# elastic

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/minimal/: minimal.cpp
include/elastic/: context.h  simple_context.h  simple_window_delegate.h
include/elastic/resources/: resource_provider.h  simple_resource_manager.h
include/elastic/views/: button_view.h  color_view.h  context_view.h  group_view.h  image_view.h  linear_sizer_view.h  stacked_sizer_view.h  text_view.h  view.h
src/: context.cpp  simple_context.cpp  simple_window_delegate.cpp
src/resources/: resource_provider.cpp  simple_resource_manager.cpp
src/views/: button_view.cpp  color_view.cpp  context_view.cpp  group_view.cpp  image_view.cpp  linear_sizer_view.cpp  stacked_sizer_view.cpp  text_view.cpp  view.cpp
